--- a/ahh.html
+++ b/ahh.html
@@ -23,9 +23,19 @@ body{
   background-color:	#E6E6FA;
   <font color='#696969'></font>
 }
-  p.three {
+  p.one {
+    border-style: solid;
+    border-color: #ADD8E6;
+    border-width: 15px;
+  }
+  p.two {
     border-style: solid;
     border-color: #008080;
+    border-width: 15px;
+  }
+  p.three {
+    border-style: solid;
+    border-color: #FF3333;
     border-width: 15px;
   }
   p.four {
@@ -33,6 +43,26 @@ body{
     border-color: #FFB6C1 #add8e6 #FFFFFF;
     border-width: 15px;
 }
+  p.five{
+    border-style: solid;
+    border-color: #660066;
+    border-width: 15px;
+  }
+  p.six{
+    border-style: solid;
+    border-color: #228B22;
+    border-width: 15px;
+  }
+  p.seven{
+    border-style: solid;
+    border-color: #4B0082;
+    border-width: 15px;
+  }
+  p.eight{
+    border-style: solid;
+    border-color: #B7CEEC;
+    border-width: 15px;
+  }
   * {box-sizing:border-box}
 body {font-family: Verdana,sans-serif;margin:0}
 .mySlides {display:none}
@@ -276,15 +306,15 @@ body {font-family: Verdana,sans-serif;margin:0}
         <div class="w3-display-topleft w3-black w3-padding">Workplace Harassment</div>
          <a href="#workplace_harassment" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Workplace Harassment</a>
     </div>
-    <div class="w3-container w3-padding-32" id="consent"><h5>What is <b>consent</b>?</h5>
-    <font size="-.5"><p>Consent is the <b>unambiguous verbal agreement</b> to participate in any sexual activity with other persons. Consent must be given freely, and once consent is given, it can be <b>taken away at any point</b>. To be more specific, consent applies to numerous aspects of physical intimacy:  kissing, touching, and intercourse, (as well as other displays of intimacy,) all require the approval of all participants; male, female, and non-binary alike.
-    </p>
-      <p>  In addition, it is important to highlight the <b>“freely given”</b> aspect of consent. If a person only agrees because they feel afraid or <b>pressured</b> into anything is not consent - they should never feel obligated to have sex or that they “owe” it to their partner. Legally, a person cannot give consent while <b>under the influence</b> of drugs or alcohol, and the best thing to do in these situations is to allow the intoxicated person to sleep it off instead of taking advantage of them in their vulnerable state.
-</p>
-  <p> Please stay safe! If your partner responds negatively if you decline their sexual advancements, or if they ignore your signs of discontent, then <b>they do not respect your consent</b>. We recommend discussing your boundaries and if they continue to disrespect you, remove yourself from the situation and cut ties with this person. <b>Your safety is more important</b> than their necessity to own your body. </p>
-      </font>
+    <div class="w3-container w3-padding-32" id="consent"><p class="one"><font size="+.5"><br>What is <b>consent</b>?<br><br>
+    </font>Consent is the <b>unambiguous verbal agreement</b> to participate in any sexual activity with other persons. Consent must be given freely, and once consent is given, it can be <b>taken away at any point</b>. To be more specific, consent applies to numerous aspects of physical intimacy:  kissing, touching, and intercourse, (as well as other displays of intimacy,) all require the approval of all participants; male, female, and non-binary alike.
+    <br><br>
+        In addition, it is important to highlight the <b>“freely given”</b> aspect of consent. If a person only agrees because they feel afraid or <b>pressured</b> into anything is not consent - they should never feel obligated to have sex or that they “owe” it to their partner. Legally, a person cannot give consent while <b>under the influence</b> of drugs or alcohol, and the best thing to do in these situations is to allow the intoxicated person to sleep it off instead of taking advantage of them in their vulnerable state.
+<br><br>
+   Please stay safe! If your partner responds negatively if you decline their sexual advancements, or if they ignore your signs of discontent, then <b>they do not respect your consent</b>. We recommend discussing your boundaries and if they continue to disrespect you, remove yourself from the situation and cut ties with this person. <b>Your safety is more important</b> than their necessity to own your body. <br><br> </p>
+ </font>
       </div>
-    <div class="w3-container w3-padding-32" id="campus_assault"><p class="three"><font size="+.5"><br>The lack of security and awareness surrounding <b>sexual assault on college campuses</b> only feeds into this toxic rape culture.</font><br><br>
+    <div class="w3-container w3-padding-32" id="campus_assault"><p class="two"><font size="+.5"><br>The lack of security and awareness surrounding <b>sexual assault on college campuses</b> only feeds into this toxic rape culture.</font><br><br>
       The United States Department of Justice reports that frighteningly,<b> 1 in 4 female undergraduates </b> will be victim to some form of <b>sexual assault</b> before she receives her diploma. While receiving education and learning how to empower and make a life for herself, 25% of women are forced into the submissive roles that plagued women centuries ago in this <b> apparently progressive nation and era </b>. Due to the egregious amount of non-consensual sex in college campuses, an increase in awareness and urgency is necessary to both help and limit the number of victims, as well as ensure that the offenders are served with <b>appropriate jail time</b>.
 <br><br>
        RAINN highlights that while a quarter of women are sexually assaulted in college, <b>70% of these crimes remain unreported</b> and of the mere 30% that are reported to the authorities, only 25% of these result in arrest. What is even more chilling is that many of those punished for this heinous crime receive minimal jail time, such as Brock Turner, the unapologetic Stanford rapist who spent three months in jail due to not only the judge’s concern for the criminal’s swim career, but society’s overall acceptance of sexual assault and rapists and the common practice of <b>victim-shaming</b>.
@@ -293,9 +323,9 @@ body {font-family: Verdana,sans-serif;margin:0}
       <br><br></p>
       </font>
       </div>
-    <div class="w3-container w3-padding-32" id="wage_gap"><h5>Is the <b>Wage Gap</b> real?</h5>
-      <p>While widely repudiated and deemed nonexistent by self-proclaiming “meninists” and “anti-feminists”, the wage gap continues to antagonize working women across the nation, ensuring that no matter their worth ethic and perseverance, they will still make <b>78 cents to the man’s dollar</b>. While several statistics <b> prove the existence of the wage gap</b>, ignorance continues to depreciate these hard facts. Many more conservative outlets claim that men and women make <b> different choices</b< that lead to the salary disparities; according to these sources, men generally choose more dangerous and more high-paying jobs that require<b> more commitment</b>, and that even within the same field,<b> men work harder </b>and choose more rigorous job specifications, and thus deserve a higher salary. While many people hold these “facts” to be indubitable, many reliable news sources highlight several disconcerting statistics that in short, display that even while <b>female college education outweighs that of males</b>, and though men and women hold <b>similar jobs</b>, men are paid more. Here are more specific statistics:
- </p>
+    <div class="w3-container w3-padding-32" id="wage_gap"><p class="three"><font size="+.5"><br>Is the <b>Wage Gap</b> real?<br><br>
+      While widely repudiated and deemed nonexistent by self-proclaiming “meninists” and “anti-feminists”, the wage gap continues to antagonize working women across the nation, ensuring that no matter their worth ethic and perseverance, they will still make <b>78 cents to the man’s dollar</b>. While several statistics <b> prove the existence of the wage gap</b>, ignorance continues to depreciate these hard facts. Many more conservative outlets claim that men and women make <b> different choices</b> that lead to the salary disparities; according to these sources, men generally choose more dangerous and more high-paying jobs that require<b> more commitment</b>, and that even within the same field,<b> men work harder </b>and choose more rigorous job specifications, and thus deserve a higher salary. While many people hold these “facts” to be indubitable, many reliable news sources highlight several disconcerting statistics that in short, display that even while <b>female college education outweighs that of males</b>, and though men and women hold <b>similar jobs</b>, men are paid more. Here are more specific statistics:
+ <br><br>
       </font>
    <!-- <img src="wagegap.png" alt="Lifetime Wage Gap for Women Compared with Men" style="width:364.8px;height:273.6px;">
    <p><a target="_blank" href="https://nwlc.org/resources/the-lifetime-wage-gap-state-by-state/"><font size="-1.5">View the gender gap for different races here.</font></a></p>
@@ -328,7 +358,7 @@ body {font-family: Verdana,sans-serif;margin:0}
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
 </div>
-<br>
+<br><br>
 
 <div style="text-align:center">
   <span class="dot" onclick="currentSlide(1)"></span>
@@ -361,7 +391,7 @@ function showSlides(n) {
   slides[slideIndex-1].style.display = "block";
   dots[slideIndex-1].className += " active";
 }
-</script>
+</script><br><br></p>
     <!--<img src="education.png" alt="Women earn less 10 years after enrolling than men do six years after enrolling" style="width:364.8px;height:273.6px;">
     <img src="diploma.png" alt="Salary vs. Education" style="width:364.8px; height:273.6px;">
     <img src="job.png" alt="As Women Take Over a Male-Dominated Field, the Pay Drops" style="width:364.8px; height=273.6px;">
@@ -380,17 +410,21 @@ function showSlides(n) {
       </font>
 
       </div>
-    <div class="w3-container w3-padding-32" id="women_of_color"><h5><b>Women of color</b> face additional hardships due to institutionalized racism</h5>
-      <p>white privilege kids</p>
+    <div class="w3-container w3-padding-32" id="women_of_color"><p class="five"><font size="+.5"><br><b>Women of color</b> face additional hardships due to institutionalized racism
+    </font><br><br>white privilege kids<br><br>
+    </p>
       </div>
-    <div class="w3-container w3-padding-32" id="abortion"><h5>Do you want an<b> abortion</b> ?</h5>
-    <p>mo' baby mo' problems</p>
+    <div class="w3-container w3-padding-32" id="abortion"><p class="six"><font size="+.5"><br>Do you want an<b> abortion</b> ?
+    </font><br><br>mo' baby mo' problems<br><br>
+  </p>
       </div>
-    <div class="w3-container w3-padding-32" id="domestic_violencee"><h5><b>Domestic violence</b> toward women</h5>
-      <p>please don't do it thanks!</p>
+    <div class="w3-container w3-padding-32" id="domestic_violencee"><p class="seven"><br><b>Domestic violence</b> toward women
+    </font><br><br>please don't do it thanks!<br><br>
+    </p>
       </div>
-    <div class="w3-container w3-padding-32" id="workplace_harassment"><h5>many women are subject to<b> workplace harassment</b> </h5>
-      <p>Dear men: stop being dildos. I'd call you dicks, but you're too fake.</p>
+    <div class="w3-container w3-padding-32" id="workplace_harassment"><p class="eight"><font size="+.5">many women are subject to<b> workplace harassment</b> </h5>
+    </font><br><br>Dear men: stop being dildos. I'd call you dicks, but you're too fake.<br><br>
+    </p>
       </div>
 
   <div class="w3-row-padding w3-grayscale">
