--- a/ahh.html
+++ b/ahh.html
@@ -35,7 +35,7 @@ body{
   }
   p.three {
     border-style: solid;
-    border-color: #FF3333;
+    border-color: #ff7f50 ;
     border-width: 15px;
   }
   p.four {
