--- a/ahh.html
+++ b/ahh.html
@@ -411,7 +411,7 @@ function showSlides(n) {
 
       </div>
     <div class="w3-container w3-padding-32" id="women_of_color"><p class="five"><font size="+.5"><br><b>Women of color</b> face additional hardships due to institutionalized racism
-    </font><br><br>While U.S. laws that specifically discriminated against people of color may have been abolished in the U.S., a culture of racism still remains that allows many individuals to continue to <b>attack people (and more specifically, women) of color with <b>zero consequences</b>. Today, women of color account for <b> 18 percent </b> of the U.S. population, yet are a <b>largely unrepresented community</b> regarding discussion on key issues that this nation faces, such as reproductive health care, gender equality, and economic issues, all of which largely affect them. <br><br>
+    </font><br><br>While U.S. laws that specifically discriminated against people of color may have been abolished in the U.S., a culture of racism still remains that allows many individuals to continue to <b>attack people</b> (and more specifically, women) of color with <b>zero consequences</b>. Today, women of color account for <b> 18 percent </b> of the U.S. population, yet are a <b>largely unrepresented community</b> regarding discussion on key issues that this nation faces, such as reproductive health care, gender equality, and economic issues, all of which largely affect them. <br><br>
     </p>
       </div>
     <div class="w3-container w3-padding-32" id="abortion"><p class="six"><font size="+.5"><br>Do you want an<b> abortion</b> ?
