--- a/ahh.html
+++ b/ahh.html
@@ -50,7 +50,7 @@ body{
   }
   p.six{
     border-style: solid;
-    border-color: #228B22;
+    border-color: #90EE90	;
     border-width: 15px;
   }
   p.seven{
