--- a/ahh.html
+++ b/ahh.html
@@ -416,7 +416,7 @@ function showSlides(n) {
      
       <br><br>Women of color make up <b>a third of all working women</b>, yet their number diminishes as you go further up the corporate ladder; 16.5 percent of S&P 500 workers are women of color, yet they only account for <b>0.4 percent of CEOs</b>, not a single one of whom is latina.
     <img src="racegap.jpg" alt="The Simple Truth" width="600" height="448"><br><br>
-    <img src="ceo.png" alt="Women Of Color Are A Third Of All Working Women, But They Aren’t In Corporate America" width="600" height="448><br><br>
+    <img src="ceo.png" alt="Women Of Color Are A Third Of All Working Women, But They Aren’t In Corporate America" style="float:right;width:600; height:448;"><br><br>
       </p>
       </div>
     <div class="w3-container w3-padding-32" id="abortion"><p class="six"><font size="+.5"><br>Do you want an<b> abortion</b> ?
