--- a/ahh.html
+++ b/ahh.html
@@ -415,7 +415,7 @@ function showSlides(n) {
       In addition, white men continue to have the majority of <b>leadership positions</b>, especially in politics (even while they prove to make questionable, uneducated, and discriminatory decisions for our nation). 
      
       <br><br>Women of color make up <b>a third of all working women</b>, yet their number diminishes as you go further up the corporate ladder; 16.5 percent of S&P 500 workers are women of color, yet they only account for <b>0.4 percent of CEOs</b>, not a single one of whom is latina.
-    <img src="racegap.jpg" alt="The Simple Truth" width="540" height="403.2"><br><br>
+    <img src="racegap.jpg" alt="The Simple Truth" width="540" height="403.2">
     <img src="ceo.png" alt="Women Of Color Are A Third Of All Working Women, But They Aren’t In Corporate America" style="float:right;width:540px; height:403.2px;"><br><br>
       </p>
       </div>
