--- a/ahh.html
+++ b/ahh.html
@@ -468,7 +468,7 @@ function showSlides(n) {
 
 <div class="w3-container w3-padding-32" id="stories">
       <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Share Your Stories</h3>
-  <p> We want this website to be helpful to everyone, and while we have many resources, one of the most important resources is examples of personal experience! If you have any advice, want an outlet to safely share your story without fear of judgement, or want to ask for help, please post here!</p>
+  <p> We want this website to be helpful to everyone, and while we have many resources, some of the most important resources are exampless of personal experience! If you have any advice, want an outlet to safely share your story without fear of judgement, or want to ask for help, please post here!</p>
      <textarea rows="8" cols="100" class="w3-input" name="message" placeholder="Your story"></textarea>
        <button class="w3-input" type="submit">Submit</button>
     </div>
