--- a/ahh.html
+++ b/ahh.html
@@ -425,7 +425,8 @@ function showSlides(n) {
       </p>
       </div>
     <div class="w3-container w3-padding-32" id="abortion"><p class="six"><font size="+.5"><br>Do you want an<b> abortion</b> ?
-    </font><br><br>mo' baby mo' problems<br><br>
+    </font><br><br>More thanb>40% of women will terminate a pregnancy</b> during some point of their reproductive lives. While abortion has been legal in the U.S. since the 1973 Supreme Court case Roe v. Wade, it is commonly practiced even in places where abortion is illegal, and if the United States were to illegalize the practice, the extremely unsafe process of <b>illegal abortions</b> would explode. <b>13% of women worldwide die</b> from serious complications from illegal abortions. If abortion were to be illegal or less accessible in the U.S., this statistic would only grow. 
+<br><br>
   </p>
       </div>
     <div class="w3-container w3-padding-32" id="domestic_violencee"><p class="seven"><br><b>Domestic violence</b> toward women
