--- a/ahh.html
+++ b/ahh.html
@@ -433,7 +433,7 @@ function showSlides(n) {
   </p>
       </div>
     <div class="w3-container w3-padding-32" id="domestic_violencee"><p class="seven"><br><b>Domestic violence</b> toward women
-    </font><br><br>While this website works primarily to highlight the struggles for women in America, it is important to highlight that both men and women experience forms of domestic violence. <b>A third of women and a quarter of men experience violence or stalking</b> from an intimate partner in their lifetime. <br><br>
+    </font><br><br>While this website works primarily to highlight the struggles for women in America, it is important to emphasize that both men and women experience forms of domestic violence. <b>A third of women and a quarter of men experience violence or stalking</b> from an intimate partner in their lifetime. 11,766 American women were killed by current or ex-male partners from 2001 to 2012, which is nearly double the amount of American troops lost during war in the same timeframe.  <br><br>
     </p>
       </div>
     <div class="w3-container w3-padding-32" id="workplace_harassment"><p class="eight"><font size="+.5">many women are subject to<b> workplace harassment</b> </h5>
