--- a/ahh.html
+++ b/ahh.html
@@ -146,7 +146,7 @@ body {font-family: Verdana,sans-serif;margin:0}
     <a href="#home" class="w3-bar-item w3-button"><b>SHATTERED</b> GLASS</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#salary" class="w3-bar-item w3-button">Salary</a>
+     <!-- <a href="#salary" class="w3-bar-item w3-button">Salary</a>-->
       <a href="#resources" class="w3-bar-item w3-button">Resources</a>
       <a href="#health" class="w3-bar-item w3-button">Health</a>
       <a href="#education" class="w3-bar-item w3-button">Education</a>
@@ -168,7 +168,7 @@ body {font-family: Verdana,sans-serif;margin:0}
 <div class="w3-content w3-padding" style="max-width:1564px">
   <!-- Salary Section -->
 
-<div class="w3-container w3-padding-32" id="salary">
+<!--<div class="w3-container w3-padding-32" id="salary">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Salary</h3>
   <p> Calculate what salary you should be asking for </p>
   <p> Input your <b> location</b>: <input class="w3-input" type="location" name="location" placeholder="Your city"></p>
@@ -176,7 +176,7 @@ body {font-family: Verdana,sans-serif;margin:0}
   <button class="w3-button w3-black w3-section" type="submit">
         <i class="fa fa-paper-plane"></i> CALCULATE MY SALARY
       </button>
-  </div>
+  </div>-->
   <!-- Resources Section -->
   <div class="w3-container w3-padding-32" id="resources">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Resources</h3>
