--- a/ahh.html
+++ b/ahh.html
@@ -436,6 +436,8 @@ function showSlides(n) {
     </font><br><br>While this website works primarily to highlight the struggles for women in America, it is important to emphasize that both men and women experience forms of domestic violence. <b>A third of women and a quarter of men experience violence or stalking</b> from an intimate partner in their lifetime. 11,766 American women were killed by current or ex-male partners from 2001 to 2012, which is nearly double the amount of American troops lost during war in the same timeframe. While troops are sent to war to defend our country, people (specifically women) shouldn’t have to <b> defend themselves in marriage</b>. 
 While the inescapability of physical domestic violence is the most highlighted aspect of domestic abuse in the media, many people are also tormented by <b>financial and emotional abuse</b>. 
 <br><br>
+<b>38,028,000 women</b> have fallen victim to some form of domestic violence in their lifetimes. Female workers <b>lose 8 million days of work every year </b> due to abuse inflicted on them by current or former male partners. 
+<br><br>
     </p>
       </div>
     <div class="w3-container w3-padding-32" id="workplace_harassment"><p class="eight"><font size="+.5">many women are subject to<b> workplace harassment</b> </h5>
