--- a/ahh.html
+++ b/ahh.html
@@ -432,7 +432,7 @@ function showSlides(n) {
 <br><br>
   </p>
       </div>
-    <div class="w3-container w3-padding-32" id="domestic_violencee"><p class="seven"><br><b>Domestic violence</b> toward women
+    <div class="w3-container w3-padding-32" id="domestic_violence"><p class="seven"><br><b>Domestic violence</b> toward women
     </font><br><br>While this website works primarily to highlight the struggles for women in America, it is important to emphasize that both men and women experience forms of domestic violence. <b>A third of women and a quarter of men experience violence or stalking</b> from an intimate partner in their lifetime. 11,766 American women were killed by current or ex-male partners from 2001 to 2012, which is nearly double the amount of American troops lost during war in the same timeframe. While troops are sent to war to defend our country, people (specifically women) shouldn’t have to <b> defend themselves in marriage</b>. 
 While the inescapability of physical domestic violence is the most highlighted aspect of domestic abuse in the media, many people are also tormented by <b>financial and emotional abuse</b>. 
 <br><br>
