--- a/ahh.html
+++ b/ahh.html
@@ -438,6 +438,8 @@ While the inescapability of physical domestic violence is the most highlighted a
 <br><br>
 <b>38,028,000 women</b> have fallen victim to some form of domestic violence in their lifetimes. Female workers <b>lose 8 million days of work every year </b> due to abuse inflicted on them by current or former male partners. <18.5 million healthcare visits> occur due to intimate partner violence every year. Not only does domestic abuse affect a person’s physical health and emotional well-being, but it greatly <b>alters their future and ability to leave these abusive relationships</b>; if women are losing days of work and spending money on hospital bills due to this violence, they can <b>become more dependent on their abusive partner</b>, who could then use this dependence to their advantage.
 <br><br>
+  In a similarly chilling way, many offenders manipulate their intimate partner into staying in an abusive relationship. They can make the victim feel like they <i>own</i> them, by preventing them from seeing their friends, telling them what to do, and even threatening to commit suicide if their ‘partner’ were to break up with them. 
+  <br><br>
     </p>
       </div>
     <div class="w3-container w3-padding-32" id="workplace_harassment"><p class="eight"><font size="+.5">many women are subject to<b> workplace harassment</b> </h5>
