--- a/ahh.html
+++ b/ahh.html
@@ -63,6 +63,11 @@ body{
     border-color: #B7CEEC;
     border-width: 15px;
   }
+  p.nine{
+    border-style: solid;
+    border-color: black;
+    border-width: 15px;
+  }
   * {box-sizing:border-box}
 body {font-family: Verdana,sans-serif;margin:0}
 .mySlides {display:none}
@@ -444,10 +449,12 @@ While the inescapability of physical domestic violence is the most highlighted a
     </p>
       </div>
     <div class="w3-container w3-padding-32" id="workplace_harassment"><p class="eight"><font size="+.5">many women are subject to<b> workplace harassment</b> </h5>
-    </font><br><br>Dear men: stop being dildos. I'd call you dicks, but you're too fake.<br><br>
+    </font><br><br>
+  Male privilege in the workplace begins even before the job even starts. Numerous studies have found that competent men are hired more often and are <b>rated higher than equally competent women</b>. 
+<br><br>
     </p>
       </div>
-
+<div class="we-container w3-padding-32"><p class="nine"><br>Dear men: stop being dildos. I'd call you dicks, but you're too fake.<br><br></p></div>
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team2.jpg" alt="Molly" style="width:100%">
