--- a/ahh.html
+++ b/ahh.html
@@ -450,7 +450,7 @@ While the inescapability of physical domestic violence is the most highlighted a
       </div>
     <div class="w3-container w3-padding-32" id="workplace_harassment"><p class="eight"><font size="+.5">many women are subject to<b> workplace harassment</b> </h5>
     </font><br><br>
-  Male privilege in the workplace begins even before the job even starts. Numerous studies have found that competent men are hired more often and are <b>rated higher than equally competent women</b>. 
+  Male privilege in the workplace begins even before the job even starts. Numerous studies have found that competent men are hired more often and are <b>rated higher than equally competent women</b>. Professors at Columbia, UChicago, and Northwestern found that<b> two thirds of managers will select male employees that are less proficient</b> at math problems over more skilled women.  
 <br><br>
     </p>
       </div>
