--- a/ahh.html
+++ b/ahh.html
@@ -63,11 +63,6 @@ body{
     border-color: #B7CEEC;
     border-width: 15px;
   }
-  p.nine{
-    border-style: solid;
-    border-color: black;
-    border-width: 15px;
-  }
   * {box-sizing:border-box}
 body {font-family: Verdana,sans-serif;margin:0}
 .mySlides {display:none}
@@ -454,7 +449,7 @@ While the inescapability of physical domestic violence is the most highlighted a
 <br><br>
     </p>
       </div>
-<div class="we-container w3-padding-32"><p class="nine"><br>Dear men: stop being dildos. I'd call you dicks, but you're too fake.<br><br></p></div>
+<br><br><p><b>Dear sexists: stop being dildos. I'd call you dicks, but you're too fake.</b></p>
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team2.jpg" alt="Molly" style="width:100%">
