--- a/ahh.html
+++ b/ahh.html
@@ -449,7 +449,7 @@ While the inescapability of physical domestic violence is the most highlighted a
 <br><br>
     </p>
       </div>
-<br><br><p><b>Dear sexists: stop being dildos. I'd call you dicks, but you're too fake.</b></p>
+<br><br><center><p><b>Dear sexists: stop being dildos. I'd call you dicks, but you're too fake.</b></center></p>
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team2.jpg" alt="Molly" style="width:100%">
