--- a/ahh.html
+++ b/ahh.html
@@ -448,6 +448,8 @@ While the inescapability of physical domestic violence is the most highlighted a
   Male privilege in the workplace begins even before the job even starts. Numerous studies have found that competent men are hired more often and are <b>rated higher than equally competent women</b>. Professors at Columbia, UChicago, and Northwestern found that<b> two thirds of managers will select male employees that are less proficient</b> at math problems over more skilled women.  
 In addition, research laboratories at numerous major universities select <b>male lab managers more often</b>, and offer them higher pay, and better mentoring opportunities. The bias that men are better workers than women recurs in both male and female bosses; even <b>women are often more likely to hire men</b>. 
 <br><br>
+Within the workplace, women face additional struggles to prove themselves to their colleagues; while skilled male workers are often respected for such, hardworking, competent women are often seen as unfeminine, aggressive, and untrustworthy. Women are either seen as <b>bad at their job or unlikable</b>- its a lose-lose situation. 
+<br><br>
     </p>
       </div>
 <center><p><b>Dear sexists: stop being dildos. I'd call you dicks, but you're too fake.</b></center></p><br><br>
