--- a/ahh.html
+++ b/ahh.html
@@ -449,6 +449,8 @@ While the inescapability of physical domestic violence is the most highlighted a
 In addition, research laboratories at numerous major universities select <b>male lab managers more often</b>, and offer them higher pay, and better mentoring opportunities. The bias that men are better workers than women recurs in both male and female bosses; even <b>women are often more likely to hire men</b>. 
 <br><br>
 Within the workplace, women face additional struggles to prove themselves to their colleagues; while skilled male workers are often respected for such, hardworking, competent women are often seen as unfeminine, aggressive, and untrustworthy. Women are either seen as <b>bad at their job or unlikable</b>- its a lose-lose situation. 
+Even in female-dominated fields, where it would seem that women would have an easier time in riding the ‘glass escalator’, <b>female bosses actually prefer white men</b> when considering promotions. Women simply have a much harder time in achieving success in the workplace. 
+
 <br><br>
     </p>
       </div>
