--- a/ahh.html
+++ b/ahh.html
@@ -303,8 +303,8 @@ body {font-family: Verdana,sans-serif;margin:0}
          <a href="#domestic_violence" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Domestic Violence</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-        <div class="w3-display-topleft w3-black w3-padding">Workplace Harassment</div>
-         <a href="#workplace_harassment" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Workplace Harassment</a>
+        <div class="w3-display-topleft w3-black w3-padding">Women in the Workplace</div>
+         <a href="#working_women" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Women in hte Workplace</a>
     </div>
     <div class="w3-container w3-padding-32" id="consent"><p class="one"><font size="+.5"><br>What is <b>consent</b>?<br><br>
     </font>Consent is the <b>unambiguous verbal agreement</b> to participate in any sexual activity with other persons. Consent must be given freely, and once consent is given, it can be <b>taken away at any point</b>. To be more specific, consent applies to numerous aspects of physical intimacy:  kissing, touching, and intercourse, (as well as other displays of intimacy,) all require the approval of all participants; male, female, and non-binary alike.
@@ -443,7 +443,7 @@ While the inescapability of physical domestic violence is the most highlighted a
   <br><br>
     </p>
       </div>
-    <div class="w3-container w3-padding-32" id="workplace_harassment"><p class="eight"><font size="+.5">many women are subject to<b> workplace harassment</b> </h5>
+    <div class="w3-container w3-padding-32" id="working_women"><p class="eight"><font size="+.5"><b>women in the workplace</b> have discernibly moer hardships than their male colleagues. </h5>
     </font><br><br>
   Male privilege in the workplace begins even before the job even starts. Numerous studies have found that competent men are hired more often and are <b>rated higher than equally competent women</b>. Professors at Columbia, UChicago, and Northwestern found that<b> two thirds of managers will select male employees that are less proficient</b> at math problems over more skilled women.  
 In addition, research laboratories at numerous major universities select <b>male lab managers more often</b>, and offer them higher pay, and better mentoring opportunities. The bias that men are better workers than women recurs in both male and female bosses; even <b>women are often more likely to hire men</b>. 
