--- a/ahh.html
+++ b/ahh.html
@@ -452,6 +452,8 @@ Within the workplace, women face additional struggles to prove themselves to the
 Even in female-dominated fields, where it would seem that women would have an easier time in riding the ‘glass escalator’, <b>female bosses actually prefer white men</b> when considering promotions. Women simply have a much harder time in achieving success in the workplace. 
 
 <br><br>
+Another major issue that working women face is <b>workplace harassment</b>.  In a study conducted by the Association of Women for Action and Research (AWARE) of 500 respondents and 92 companies, <b>54% of respondents have experienced sexual harassmen</b>t in the workplace, 72% of whom are women.
+<br><br>
     </p>
       </div>
 <center><p><b>Dear sexists: stop being dildos. I'd call you dicks, but you're too fake.</b></center></p><br><br>
