--- a/ahh.html
+++ b/ahh.html
@@ -452,7 +452,8 @@ Within the workplace, women face additional struggles to prove themselves to the
 Even in female-dominated fields, where it would seem that women would have an easier time in riding the ‘glass escalator’, <b>female bosses actually prefer white men</b> when considering promotions. Women simply have a much harder time in achieving success in the workplace. 
 
 <br><br>
-Another major issue that working women face is <b>workplace harassment</b>.  In a study conducted by the Association of Women for Action and Research (AWARE) of 500 respondents and 92 companies, <b>54% of respondents have experienced sexual harassmen</b>t in the workplace, 72% of whom are women.
+Another major issue that working women face is <b>workplace harassment</b>.  In a study conducted by the Association of Women for Action and Research (AWARE) of 500 respondents and 92 companies, <b>54% of respondents have experienced sexual harassment</b> in the workplace, 72% of whom are women. Many of these women do not feel protected by the law, because acts of verbal abuse, lewd emails or comments, and touching <b>do not qualify as criminal acts</b>, giving the offenders free reign to harass their coworkers or employees. In addition, 67% of participants in AWARE’s study remain unaware of their companies’ policies regarding putting a stop to this harassment. Women will never be seen as equals unless they are known for their<b> hard work, rather than for their bodies</b>. 
+
 <br><br>
     </p>
       </div>
