--- a/ahh.html
+++ b/ahh.html
@@ -304,7 +304,7 @@ body {font-family: Verdana,sans-serif;margin:0}
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
         <div class="w3-display-topleft w3-black w3-padding">Women in the Workplace</div>
-         <a href="#working_women" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Women in hte Workplace</a>
+         <a href="#working_women" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Women in the Workplace</a>
     </div>
     <div class="w3-container w3-padding-32" id="consent"><p class="one"><font size="+.5"><br>What is <b>consent</b>?<br><br>
     </font>Consent is the <b>unambiguous verbal agreement</b> to participate in any sexual activity with other persons. Consent must be given freely, and once consent is given, it can be <b>taken away at any point</b>. To be more specific, consent applies to numerous aspects of physical intimacy:  kissing, touching, and intercourse, (as well as other displays of intimacy,) all require the approval of all participants; male, female, and non-binary alike.
