--- a/ahh.html
+++ b/ahh.html
@@ -443,7 +443,7 @@ While the inescapability of physical domestic violence is the most highlighted a
   <br><br>
     </p>
       </div>
-    <div class="w3-container w3-padding-32" id="working_women"><p class="eight"><font size="+.5"><b>women in the workplace</b> have discernibly moer hardships than their male colleagues. </h5>
+    <div class="w3-container w3-padding-32" id="working_women"><p class="eight"><font size="+.5"><b>Women in the workplace</b> have discernibly moer hardships than their male colleagues. </h5>
     </font><br><br>
   Male privilege in the workplace begins even before the job even starts. Numerous studies have found that competent men are hired more often and are <b>rated higher than equally competent women</b>. Professors at Columbia, UChicago, and Northwestern found that<b> two thirds of managers will select male employees that are less proficient</b> at math problems over more skilled women.  
 In addition, research laboratories at numerous major universities select <b>male lab managers more often</b>, and offer them higher pay, and better mentoring opportunities. The bias that men are better workers than women recurs in both male and female bosses; even <b>women are often more likely to hire men</b>. 
@@ -460,10 +460,10 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
 <center><p><b>Dear sexists: stop being dildos. I'd call you dicks, but you're too fake.</b></center></p><br><br>
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team2.jpg" alt="Molly" style="width:100%">
+      <img src="ohhey.jpg" alt="Molly" style="width:100%">
       <h3>Molly Brigham</h3>
       <p class="w3-opacity">Co-Founder</p>
-      <p>Junior at National Cathedral School. I love sexism. Love it.</p>
+      <p>As a junior at National Cathedral School, an all girls school, my education often centers around female empowerment and issues regarding sexism. While our school often seems to represent the more privileged aspects of feminism and female discrimination, I want to expand my views and consider feminism as a necessity not simply for rich, white, cis women, but all women.</p>
       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
