--- a/ahh.html
+++ b/ahh.html
@@ -443,7 +443,7 @@ While the inescapability of physical domestic violence is the most highlighted a
   <br><br>
     </p>
       </div>
-    <div class="w3-container w3-padding-32" id="working_women"><p class="eight"><font size="+.5"><b>Women in the workplace</b> have discernibly moer hardships than their male colleagues. </h5>
+    <div class="w3-container w3-padding-32" id="working_women"><p class="eight"><font size="+.5"><b>Women in the workplace</b> have discernibly more hardships than their male colleagues. </h5>
     </font><br><br>
   Male privilege in the workplace begins even before the job even starts. Numerous studies have found that competent men are hired more often and are <b>rated higher than equally competent women</b>. Professors at Columbia, UChicago, and Northwestern found that<b> two thirds of managers will select male employees that are less proficient</b> at math problems over more skilled women.  
 In addition, research laboratories at numerous major universities select <b>male lab managers more often</b>, and offer them higher pay, and better mentoring opportunities. The bias that men are better workers than women recurs in both male and female bosses; even <b>women are often more likely to hire men</b>. 
