--- a/ahh.html
+++ b/ahh.html
@@ -463,7 +463,7 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
       <img src="ohhey.jpg" alt="Molly" style="width:100%">
       <h3>Molly Brigham</h3>
       <p class="w3-opacity">Co-Founder</p>
-      <p>As a junior at National Cathedral School, an all girls school, my education often centers around female empowerment and issues regarding sexism. While our school often seems to represent the more privileged aspects of feminism and female discrimination, I want to expand my views and consider feminism as a necessity not simply for rich, white, cis women, but all women.</p>
+      <p>As a junior at National Cathedral School, an all girls school, my education often centers around female empowerment and issues regarding sexism. While our school often seems to represent the more privileged aspects of feminism and female discrimination, I want to expand my views and consider feminism as a necessity not simply for rich, white, cis women, but rather all women.</p>
       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
