--- a/ahh.html
+++ b/ahh.html
@@ -497,6 +497,7 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
       <textarea rows="8" cols="100" class="w3-input" name="message" placeholder="Your message"></textarea>
       <button class="w3-input" type="submit">Submit</button>
     </form>
+  <a href="https://tacrean.github.io/finalProject/stories.html" target="_blank" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">View Other Stories</a>
     </div>
   <!-- Contact Section -->
   <div class="w3-container w3-padding-32" id="contact">
