--- a/stories.html
+++ b/stories.html
@@ -7,6 +7,12 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <BODY>
 <div class="w3-content w3-padding" style="max-width:1564px">
+  <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+  <img class="w3-image" src="architect.jpg" alt="Architecture" width="1500" height="800">
+  <div class="w3-display-middle w3-margin-top w3-center">
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>SHATTERED</b></span> <span class="w3-hide-small w3-text-light-grey">Glass</span></h1>
+  </div>
+</header>
 <div class="w3-container w3-padding-32">
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Stories</h3>
   <p>so i have bad experience with some men bc tjeu pftem suck</p>
