--- a/stories.html
+++ b/stories.html
@@ -14,7 +14,7 @@
   </div>
 </header>
 <div class="w3-container w3-padding-32">
-  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16"><b><center>Stories</b></center></h3>
+  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16"><b><center>OUR STORIES</b></center></h3>
   <p>so i have bad experience with some men bc tjeu pftem suck</p>
   </div>
   </body>
