--- a/stories.html
+++ b/stories.html
@@ -15,7 +15,9 @@
 </header>
 <div class="w3-container w3-padding-32">
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16"><b><center>OUR STORIES</b></center></h3>
-  <p>so i have bad experience with some men bc tjeu pftem suck</p>
+  <p>Here's one story</p>
+  <hr>
+  <p>Oh hey look here's another</p>
   </div>
   </body>
   </html>
