--- a/stories.html
+++ b/stories.html
@@ -5,6 +5,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" background-color: yellow;>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <style>
+    hr{
+      color:	#D3D3D3;
+    }
 <BODY>
 <div class="w3-content w3-padding" style="max-width:1564px">
   <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
