--- a/ahh.html
+++ b/ahh.html
@@ -481,10 +481,10 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="20170410_163713.jpg" alt="Madie" style="width:100%">
+      <img src="20170808_094823.jpg" alt="Madie" style="width:100%">
       <h3>Madie Yuen</h3>
       <p class="w3-opacity">Co-Founder</p>
-      <p>Currently a junior at Winston Churchill High School with an interest in biology and law.</p>
+      <p>Currently a junior at Winston Churchill High School with an interest in biology and law. I enjoy baking </p>
       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
   </div>
