--- a/stories.html
+++ b/stories.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <style>
     hr{
-      color:	#D3D3D3;
+      color:	#000000;
     }
   </style>
 <BODY>
