--- a/stories.html
+++ b/stories.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" background-color: yellow;>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <style>
-    hr{
+    hr.one{
       color:	#000000;
     }
   </style>
@@ -21,7 +21,7 @@
 <div class="w3-container w3-padding-32">
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16"><b><center>OUR STORIES</b></center></h3>
   <p>Here's one story</p>
-  <hr>
+  <hr class="one">
   <p>Oh hey look here's another</p>
   </div>
   </body>
