--- a/ahh.html
+++ b/ahh.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta name="referrer" content="origin">
+  <meta name="referrer" content="https://tacrean.github.io/finalProject/ahh.html">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
