--- a/stories.html
+++ b/stories.html
@@ -18,7 +18,9 @@
 </header>
 <div class="w3-container w3-padding-32">
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16"><b><center>OUR STORIES</b></center></h3>
-  <p>Here's one story</p>
+  <p>	
+Freshman year I was one of four girls in a class of 45. I enrolled in Architecture and Design, which I expected to be my favorite class of the year. I quickly found that it would be the longest class of my life. Though the intentions might have been noble, my teacher came off as nitpicky and rude. But the distinction was that his mood changed whenever he interacted with the 41 boys in the class. I spent many hours laboring over projects that my teacher combed through to find faults. The class was miserable and it soon led me to reconsider a career in Architecture. My passion had been destroyed, like a tower of Legos crashing down. Just a few months in, I was asked to be part of a Society of Women Engineers program. I was apprehensive about taking the job because I loathed my hour-long engineering class. The world had shown me what I was like to be a girl in engineering, and it wasn’t fun at all. I asked myself why I needed to subject myself for more of that anguish. But, I took it and it turned out to be one of the best decisions of my life. 
+    <br><<i>--Hahley</i></p>
   <hr style="border: 1px solid #f00" /> 
   <p>Oh hey look here's another</p>
   </div>
