--- a/ahh.html
+++ b/ahh.html
@@ -464,10 +464,10 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team1.jpg" alt="Taima" style="width:100%">
+      <img src="NYpic.jpg" alt="Taima" style="width:100%">
       <h3>Taima Crean</h3>
       <p class="w3-opacity">Co-Founder</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p>I am a current senior at the School Without Walls and an advocate for women in STEM. As the first ever female captain of my robotics team and the co-founder of the Women in STEM club, I am passionate about giving girls the opportunities they need to discover their potentials. I also enjoy coffee and dogs. </p>
      <!-- <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
