--- a/ahh.html
+++ b/ahh.html
@@ -455,7 +455,7 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
     </p>
       </div>
 <!--<center><p><b>Dear sexists: stop being dildos. I'd call you dicks, but you're too fake.</b></center></p><br><br>-->
-  <div class="w3-row-padding w3-grayscale">
+  <div class="w3-row-padding ">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="ohhey.jpg" alt="Molly" style="width:100%">
       <h3>Molly Brigham</h3>
