--- a/ahh.html
+++ b/ahh.html
@@ -137,6 +137,13 @@ body {font-family: Verdana,sans-serif;margin:0}
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
 }
+.rotateimg180{
+  -webkit-transform:rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+  }
 </style>
 
 
@@ -487,7 +494,7 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="NYpic.jpeg" alt="Taima" style="width:100%" class="rotate90">
+      <img src="NYpic.jpeg" alt="Taima" style="width:100%" class="rotateimg180">
       <h3>Taima Crean</h3>
       <p class="w3-opacity">Co-Founder</p>
       <p>I am a current senior at the School Without Walls and an advocate for women in STEM. As the first ever female captain of my robotics team and the co-founder of the Women in STEM club, I am passionate about giving girls the opportunities they need to discover their potentials. I also enjoy coffee and dogs. </p>
