--- a/ahh.html
+++ b/ahh.html
@@ -487,7 +487,7 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
 <!--<center><p><b>Dear sexists: stop being dildos. I'd call you dicks, but you're too fake.</b></center></p><br><br>-->
   <div class="w3-row-padding ">
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="ohhey.jpg" alt="Molly" style="width:100%">
+      <img src="ohhey.jpg" alt="Molly" style="width:411; height:432.67;">
       <h3>Molly Brigham</h3>
       <p class="w3-opacity">Co-Founder</p>
       <p>As a junior at National Cathedral School, an all girls school, my education often centers around female empowerment and issues regarding sexism. While our school often seems to represent the more privileged aspects of feminism and female discrimination, I want to expand my views and consider feminism as a necessity not simply for rich, white, cis women, but rather all women.</p>
