--- a/ahh.html
+++ b/ahh.html
@@ -504,7 +504,8 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
       <img src="/w3images/team3.jpg" alt="Madeleine" height="320">
       <h3>Madeleine Nations</h3>
       <p class="w3-opacity">Co-Founder</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p>I am a senior at Western Branch High School passionate about engineering. I want to see more women in engineering and the expansion of programs to get more women into STEM. I was the project manager of a Society of Women Engineers team that engineered a gross-motor-skills toy for a special needs elementary school class. I enjoy travelling and playing field hockey.  
+</p>
       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
